--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <h1>The Ithaca Zoo</h1>
 
   <main>
+    <!-- Source: original content -->
     <h2>Welcome!</h2>
 
     <p>
@@ -29,6 +30,7 @@
     </p>
 
     <section>
+      <!-- Source: original content -->
       <h2>About the Zoo</h2>
 
       <p>The Ithaca Zoo is New York's premier hillside zoo, and fun for the whole family.</p>
@@ -40,6 +42,7 @@
     </section>
 
     <section>
+      <!-- Source: original content -->
       <h2>Events</h2>
       <p>
         Our next event is the Red Panda Meet and Greet, where you have a chance to meet our favorite little bundles of
@@ -61,6 +64,7 @@
     </section>
 
     <section>
+      <!-- Source: original content -->
       <h2>Our Animals</h2>
 
       <p>We host a wide variety of animals in climate-controlled biomes designed to perfectly match their natural
@@ -93,9 +97,12 @@
         <dd>Although there are many kinds of giraffes in the wild, this is the kind most commonly found in zoos around the
           world.</dd>
       </dl>
+
+      <p>Source: <cite>https://www.wikipedia.org/</cite></p>
     </section>
 
     <section>
+      <!-- Source: original content -->
       <h2>Main Attractions</h2>
       <p>In addition to our wonderful animals, the zoo includes a fully functional food court featuring some of Ithaca's
         best chefs.</p>
@@ -112,6 +119,7 @@
     </section>
 
     <section>
+      <!-- Source: original content -->
       <h2>Directions</h2>
 
       <p>Head west from downtown Ithaca on Highway 79 until you reach the bend in the road.</p>
